# AmorphousMetals

./: .gitignore  .mdl-style.rb  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-docker.yaml
amorphous_metals/: __init__.py  convert.py  utils.py
amorphous_metals/streamlit/: Home.md  Home.py  __init__.py  utils.py
amorphous_metals/streamlit/pages/: 01_Introduction.py  02_Data.md  02_Data.py  03_Hierarchical clustering.md  03_Hierarchical clustering.py  04_K-means clustering.md  04_K-means clustering.py  04_KMeans clustering.py  05_Other methods.py  05_Other methods_ChatGPT.md  05_Other methods_OPTICS.md  06_Discussion.md  06_Discussion.py  07_References.md  07_References.py  99_Privacy policy.md  99_Privacy policy.py  __init__.py
data/ZrCu alloys/: Be0_matryca15_50mN_spacing7um_strefa_przejsciowa.TXT
data/ZrTi alloys/: s3_matryca15_25mN_spacing5um.TXT
metale_amorficzne/: Home.md  Home.py  convert.py  streamlit.py  utils.py
metale_amorficzne/description/: 01_general.md
metale_amorficzne/pages/: 01_Introduction.py  02_Data.md  02_Data.py  04_KMeans clustering.py  05_Other methods.md
metale_amorficzne/streamlit/: Home.md  Home.py  utils.py
metale_amorficzne/streamlit/pages/: 01_Introduction.md  01_Introduction.py  02_Data.md  02_Data.py  03_Hierarchical clustering.md  03_Hierarchical clustering.py  04_KMeans clustering.md  04_KMeans clustering.py  05_Other methods.md  05_Other methods.py  05_Other methods_ChatGPT.md  05_Other methods_OPTICS.md  06_Discussion.py  07_References.md  07_References.py
notebooks/: process_image.ipynb
