[tool.poetry]
name = "metale_amorficzne"
version = "0.0.0"  # Placeholder for dynamic versioning.
description = ""
authors = ["Katarzyna Foszcz <kasia@foszcz.co>"]
packages = [{ include = "metale_amorficzne" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
more-itertools = "^10.1.0"
scikit-learn = "^1.3.2"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.6.1"

[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.31.0"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.2"
jupyterlab-widgets = "^3.0.10"
ipympl = "^0.9.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = true
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
