[tool.poetry]
name = "amorphous_metals"
version = "0.0.0"  # Placeholder for dynamic versioning.
description = ""
authors = ["Katarzyna Foszcz <kasia@foszcz.co>"]
packages = [{ include = "amorphous_metals" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
more-itertools = "^10.1.0"
scikit-learn = "^1.3.2"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.6.1"
black = "^24.2.0"
ruff = "^0.2.1"

[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.31.0"
streamlit-image-coordinates = "^0.1.6"
streamlit-float = "^0.3.2"
extra-streamlit-components = "^0.1.70"
streamlit-analytics2 = "^0.6.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.2"
jupyterlab-widgets = "^3.0.10"
ipympl = "^0.9.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = true
style = "pep440"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
